# data-platform-lab

./: .gitignore  README.md
configs/: benchmark.json  (+2 more)
python/: README.md  pyproject.toml
python/data/manifests/: api_ingestion_20260320_084649.json  api_ingestion_20260320_091300.json  api_ingestion_20260320_122458.json  api_ingestion_20260320_124037.json  api_ingestion_20260320_213248.json  api_ingestion_20260321_081847.json  api_ingestion_20260321_084000.json  api_ingestion_20260321_084402.json  api_ingestion_20260321_090211.json  api_ingestion_20260321_122311.json  api_ingestion_20260321_123319.json  csv_ingestion_20260320_084650.json  csv_ingestion_20260320_091300.json  csv_ingestion_20260320_122459.json  csv_ingestion_20260320_124037.json  csv_ingestion_20260320_213249.json  csv_ingestion_20260321_081847.json  csv_ingestion_20260321_081848.json  csv_ingestion_20260321_084001.json  csv_ingestion_20260321_084402.json  csv_ingestion_20260321_090211.json  csv_ingestion_20260321_122311.json  csv_ingestion_20260321_123319.json  events_etl_20260320_084650.json  events_etl_20260320_091301.json  events_etl_20260320_122459.json  events_etl_20260320_124037.json  events_etl_20260320_124038.json  events_etl_20260320_213249.json  events_etl_20260320_213250.json  events_etl_20260321_081848.json  events_etl_20260321_084001.json  events_etl_20260321_084403.json  events_etl_20260321_090211.json  events_etl_20260321_090212.json  events_etl_20260321_122312.json  events_etl_20260321_123319.json  events_etl_20260321_123320.json  sensor_demo_20260320_151719.json  sensor_demo_20260320_155923.json  (+31 more)
python/tests/: conftest.py  test_analytics.py  test_api_pipeline.py  test_benchmark.py  test_config.py  test_csv_pipeline.py  test_customer_etl.py  test_demo.py  test_incremental_etl.py  test_manifest.py  test_observability.py  test_runner.py  test_sensor_demo.py  test_snapshot_diff.py  test_streaming.py  test_validation.py  test_warehouse.py
(+218 files in other folders)
