[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-platform-lab"
version = "0.1.0"
description = "Hands-on data engineering lab exercises"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
