[tool.poetry]
name = "data-platform-lab"
version = "0.1.0"
description = "Hands-on data engineering lab exercises"
readme = "README.md"
license = "MIT"
packages = [{include = "data_platform_lab", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
