[tool.poetry]
name = "data-platform-lab"
version = "0.1.0"
description = "Hands-on data engineering lab — batch pipelines, streaming, validation, storage, and orchestration exercises."
authors = []
readme = "README.md"
license = "MIT"
packages = [{ include = "data_platform_lab", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.4"
mypy = ">=1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
